--- a/src/components/layout/WeatherSummary/WeatherHeroCard/WeatherHeroCard.module.css
+++ b/src/components/layout/WeatherSummary/WeatherHeroCard/WeatherHeroCard.module.css
@@ -23,6 +23,7 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
+    margin-top: 2rem;
     border-radius: 1rem;
     padding: 2rem;
     background: var(--Neutral-800);
